--- a/_config.yml
+++ b/_config.yml
@@ -10,20 +10,20 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-theme                  : "minimal-mistakes-jekyll"
+# theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Dong Myeong"
+title                    : "BLANC"
 title_separator          : "-"
 name                     : "Your Name"
-description              : "Dong Myeong E GGu"
-url                      : "https://dmlimgo.github.io"
-baseurl                  : "/TIL"
-repository               : "dmlimgo/TIL"
-teaser                   : "/assets/images/500x300.png"
+description              : "An amazing website."
+url                      : "https://BLANC.github.io"
+baseurl                  : "/blog"
+repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -290,5 +290,3 @@ defaults:
       comments: # true
       share: true
       related: true
-
-theme: jekyll-theme-slate
