--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@
 
 # User-specific stuff
 .idea/
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
 # Generated files
 .idea/**/contentModel.xml
