backjoon 수학문제 풀이

--- a/1. PS/1.1 Backjoon/.vscode/settings.json
+++ b/1. PS/1.1 Backjoon/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\lim\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
+    "python.pythonPath": "C:\\Users\\multicampus\\AppData\\Local\\Programs\\Python\\Python36\\python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
